# P_Invoke.Sample

./: CMakeLists.txt  LICENSE  P_Invoke.Sample.sln  P_Invoke.Sample.slnx
src/Sample.Invoker/: App.config  Program.cs  Sample.Invoker.csproj
src/Sample.Invoker/Declarations/: Platform.Array.cs  Platform.Constants.cs  Platform.Exception.cs  Platform.Primitives.cs  Platform.String.cs  Platform.Struct.cs
src/Sample.Invoker/Declares/: Platform.Array.cs  Platform.Constants.cs  Platform.Exception.cs  Platform.Primitives.cs  Platform.String.cs  Platform.Struct.cs  Platform.cs
src/Sample.Invoker/Models/: ArrayDesc.cs  Matrix4x4.cs  MatrixDesc.cs  Point.cs  RangeDesc.cs  Rectangle.cs
src/Sample.Invoker/Properties/: launchSettings.json
src/Sample.NativeLibrary/: CMakeLists.txt  Sample.NativeLibrary.rc  Sample.NativeLibrary.vcxproj  Sample.NativeLibrary.vcxproj.filters  array_desc.cpp  array_desc.h  matrix4x4.h  matrix_desc.h  message.cpp  message.h  message_wrapper.cpp  message_wrapper.h  platform.cpp  platform.h  platform_array.cpp  platform_array.h  platform_exception.cpp  platform_exception.h  platform_primitives.cpp  platform_primitives.h  platform_string.cpp  platform_string.h  platform_struct.cpp  platform_struct.h  point.cpp  point.h  range_desc.h  rectangle.cpp  rectangle.h  resource.h
src/Sample.NativeLibrary.Wrapper/: Sample.NativeLibrary.Wrapper.csproj
src/Sample.NativeLibrary.Wrapper/Declarations/: MessageWrapper.cs  Platform.Array.cs  Platform.Constants.cs  Platform.Exception.cs  Platform.Primitives.cs  Platform.String.cs  Platform.Struct.cs
(+6 files in other folders)
